hydro2/hydro2-operator-derive/tests/trybuild/fail_09_duplicate_opcode.stderr
error: Opcode key was provided more than once in `#[operator(...)]`.
  --> tests/trybuild/fail_09_duplicate_opcode.rs:12:5
   |
12 |     opcode="OpCode::AnotherOp" // should fail
   |     ^^^^^^
